# OmniGCD

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
checkpoints/: README.md
configs/: eval_toy.yaml  train_gcdformer.yaml
omnigcd/: __init__.py
omnigcd/eval/: __init__.py  kmeans.py  metrics.py  pipeline.py
omnigcd/models/: __init__.py  gcdformer.py
omnigcd/training/: __init__.py  losses.py
scripts/: convert_legacy_checkpoint.py  eval_npz.py  extract_audio_features.py  extract_remote_sensing_features.py  extract_text_features.py  extract_vision_features.py  make_toy_features.py  train_gcdformer.py
